--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <div>
   	<ul>
   		<il>bricks</il>
-  		<il>more quickcrete</il> 
+  		<il>more morter</il> 
   		<il>sand</il> 		
   	</ul>
   </div>
